logs/pio-cli.log
Listing '.'...
Listing './bin'...
Compiling './bin/wsdump.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/IPython'...
Listing './lib/python3.5/site-packages/IPython/core'...
Listing './lib/python3.5/site-packages/IPython/core/magics'...
Listing './lib/python3.5/site-packages/IPython/core/profile'...
Listing './lib/python3.5/site-packages/IPython/core/tests'...
Listing './lib/python3.5/site-packages/IPython/core/tests/daft_extension'...
Listing './lib/python3.5/site-packages/IPython/extensions'...
Listing './lib/python3.5/site-packages/IPython/extensions/tests'...
Listing './lib/python3.5/site-packages/IPython/external'...
Listing './lib/python3.5/site-packages/IPython/external/decorators'...
Listing './lib/python3.5/site-packages/IPython/kernel'...
Listing './lib/python3.5/site-packages/IPython/lib'...
Listing './lib/python3.5/site-packages/IPython/lib/tests'...
Listing './lib/python3.5/site-packages/IPython/sphinxext'...
Listing './lib/python3.5/site-packages/IPython/terminal'...
Listing './lib/python3.5/site-packages/IPython/terminal/pt_inputhooks'...
Listing './lib/python3.5/site-packages/IPython/terminal/tests'...
Listing './lib/python3.5/site-packages/IPython/testing'...
Listing './lib/python3.5/site-packages/IPython/testing/plugin'...
Listing './lib/python3.5/site-packages/IPython/testing/tests'...
Listing './lib/python3.5/site-packages/IPython/utils'...
Listing './lib/python3.5/site-packages/IPython/utils/tests'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/cachetools'...
Listing './lib/python3.5/site-packages/cachetools-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/concurrent'...
Listing './lib/python3.5/site-packages/concurrent/futures'...
Compiling './lib/python3.5/site-packages/concurrent/futures/_base.py'...
***   File "./lib/python3.5/site-packages/concurrent/futures/_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/fire'...
Listing './lib/python3.5/site-packages/fire-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/futures-3.1.1.egg-info'...
Listing './lib/python3.5/site-packages/google'...
Listing './lib/python3.5/site-packages/google/auth'...
Listing './lib/python3.5/site-packages/google/auth/compute_engine'...
Listing './lib/python3.5/site-packages/google/auth/crypt'...
Listing './lib/python3.5/site-packages/google/auth/transport'...
Listing './lib/python3.5/site-packages/google/oauth2'...
Listing './lib/python3.5/site-packages/google_auth-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.5.dist-info'...
Listing './lib/python3.5/site-packages/ipaddress-1.0.19.egg-info'...
Listing './lib/python3.5/site-packages/ipython-5.5.0.dist-info'...
Listing './lib/python3.5/site-packages/ipython_genutils'...
Listing './lib/python3.5/site-packages/ipython_genutils/testing'...
Listing './lib/python3.5/site-packages/ipython_genutils/tests'...
Listing './lib/python3.5/site-packages/ipython_genutils-0.2.0.dist-info'...
Listing './lib/python3.5/site-packages/kubernetes'...
Listing './lib/python3.5/site-packages/kubernetes/client'...
Listing './lib/python3.5/site-packages/kubernetes/client/apis'...
Listing './lib/python3.5/site-packages/kubernetes/client/models'...
Listing './lib/python3.5/site-packages/kubernetes/config'...
Listing './lib/python3.5/site-packages/kubernetes/watch'...
Listing './lib/python3.5/site-packages/kubernetes-3.0.0a1.dist-info'...
Listing './lib/python3.5/site-packages/pexpect'...
Listing './lib/python3.5/site-packages/pexpect-4.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pickleshare-0.7.4.dist-info'...
Listing './lib/python3.5/site-packages/pio'...
Listing './lib/python3.5/site-packages/pio_cli-0.87.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prompt_toolkit'...
Listing './lib/python3.5/site-packages/prompt_toolkit/clipboard'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/completers'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/regular_languages'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/telnet'...
Listing './lib/python3.5/site-packages/prompt_toolkit/contrib/validators'...
Listing './lib/python3.5/site-packages/prompt_toolkit/eventloop'...
Listing './lib/python3.5/site-packages/prompt_toolkit/filters'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding'...
Listing './lib/python3.5/site-packages/prompt_toolkit/key_binding/bindings'...
Listing './lib/python3.5/site-packages/prompt_toolkit/layout'...
Listing './lib/python3.5/site-packages/prompt_toolkit/styles'...
Listing './lib/python3.5/site-packages/prompt_toolkit/terminal'...
Listing './lib/python3.5/site-packages/prompt_toolkit-1.0.15.dist-info'...
Listing './lib/python3.5/site-packages/ptyprocess'...
Listing './lib/python3.5/site-packages/ptyprocess-0.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1_modules'...
Listing './lib/python3.5/site-packages/pyasn1_modules-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.1.dist-info'...
Listing './lib/python3.5/site-packages/rsa'...
Listing './lib/python3.5/site-packages/rsa-3.4.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplegeneric-0.8.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.7.7.dist-info'...
Listing './lib/python3.5/site-packages/traitlets'...
Listing './lib/python3.5/site-packages/traitlets/config'...
Listing './lib/python3.5/site-packages/traitlets/config/tests'...
Listing './lib/python3.5/site-packages/traitlets/tests'...
Listing './lib/python3.5/site-packages/traitlets/utils'...
Listing './lib/python3.5/site-packages/traitlets/utils/tests'...
Listing './lib/python3.5/site-packages/traitlets-4.3.2.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.21.1.dist-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './lib/python3.5/site-packages/websocket'...
Listing './lib/python3.5/site-packages/websocket/tests'...
Listing './lib/python3.5/site-packages/websocket/tests/data'...
Listing './lib/python3.5/site-packages/websocket_client-0.46.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
